fix paragraph 7 alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -187,6 +187,10 @@ margin-top: 20px;
     font-weight: 500px;
     line-height: 1.5rem;
     font-size: 1.1rem;
+    padding-left: 60px;
 }
 
+.dataEntry{
+margin-top: 500px;
 
+}
